--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node server.js"
   },
   "repository": {
@@ -20,5 +20,10 @@
   "homepage": "https://github.com/jleitz27/zookeepr#readme",
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "homepage": "https://github.com/jleitz27/jest-another-RPG#readme",
+  "devDependencies": {
+    "inquirer": "^7.3.3",
+    "jest": "^28.1.0"
   }
 }
